fix: incorrect image display on mobile

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
 	padding: 0 1.5rem 0 1.5rem;
 	border-radius: 25px;
 	position: relative;
-	transform: translateY(3.125rem);
+	/* transform: translateY(3.125rem); */
 	margin: 0 auto;
 	box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.3);
 }
@@ -61,7 +61,7 @@ body {
 	padding-bottom: 1rem;
 }
 
-/* .card .illustration {
+.illustration {
 	position: absolute;
 	top: 0;
 	display: inline-block;
@@ -73,7 +73,11 @@ body {
 	position: absolute;
 	top: 0;
 	transform: translate(13px, 0%);
-} */
+}
+
+.box {
+	display: none;
+}
 
 .card h1 {
 	text-align: center;
@@ -159,9 +163,6 @@ body {
 		transform: none;
 	}
 
-	picture {
-	}
-
 	.image_wrapper {
 		position: relative;
 		overflow: hidden;
@@ -186,8 +187,7 @@ body {
 
 	.content_wrapper {
 		max-width: 21.875rem;
-		margin: 0 6.25rem 0 0;
-		justify-content: center;
+		margin: 6rem 6.25rem 0 0;
 	}
 
 	.content_wrapper h1 {
@@ -195,6 +195,10 @@ body {
 	}
 
 	.content_wrapper ul {
-		height: auto;
+		height: 100%;
+	}
+
+	.box {
+		display: initial;
 	}
 }
